fixed bags on mobile for test completed page

--- a/src/sass/components/test-complete.scss
+++ b/src/sass/components/test-complete.scss
@@ -12,6 +12,8 @@
 
 	&__info {
 		float: left;
+
+		@media (max-width: $tablet) { width: 100%; }
 	}
 
 	&__links {
@@ -44,13 +46,19 @@
 		line-height: 1.3;
 		margin: 0;
 		padding: 0;
+
+		@media (max-width: $tablet) { width: 70%; }
 	}
 
 	&__stat {
 		font-family: $open-sans;
 		font-size: 14px;
-		line-height: 18px;
 		color: $gray-darker;
+
+		@media (max-width: $tablet) {
+			display: inline-block;
+			line-height: 20px;
+		}
 	}
 
 	&__next-text {
